--- a/_posts/2020-08-04-vechisq.md
+++ b/_posts/2020-08-04-vechisq.md
@@ -10,7 +10,7 @@ tags:
   - statistics
 ---
 
-Writing fast code is actually about writing efficient code. Writing code in Python doesn't magically make electrons slower. The perceived slowness of higher-level languages like R and Python comes from inefficiencies at run time, i.e. an increased number of steps from start to finish. Code written in a programming language written in C must take more steps to execute than a program written in C itself (or some other equal of lower-level language). Luckily high-level languages have ways to access the underlying low-level language allowing users to utilise or write more efficient code.
+Writing fast code is actually about writing efficient code. Writing code in R doesn't magically make electrons slower. The perceived slowness of higher-level languages like R and Python comes from inefficiencies at run time, i.e. an increased number of steps from start to finish. Code written in a programming language written in C must take more steps to execute than a program written in C itself (or some other equal of lower-level language). Luckily high-level languages have ways to access the underlying low-level language allowing users to utilise or write more efficient code.
 
 ## Vectorise your code
 
@@ -48,7 +48,7 @@ chisq.test       37.70792
 chisq.slim.test  5.22655 
 ```
 
-To run this slim function 1000 time would require using something like `lapply`, looping over every test and thus taking 1000 times longer. To improve the efficiency of our function, we can vectorise the code. Below is the vectorised version, lets go through it line by line. 
+To run this slim function 1000 time would require using something like `apply()`, looping over every test and thus taking 1000 times longer. To improve the efficiency of our function, we can vectorise the code. Below is the vectorised version, lets go through it line by line. 
 
 ```R
 > chisq.vec.test  <- function(x, p) {
