--- a/_posts/2020-08-04-vechisq.md
+++ b/_posts/2020-08-04-vechisq.md
@@ -65,7 +65,7 @@ Our function now expects `x` to be a data frame and `p` a vector of probabilitie
 
 ```R
 > chisq.vec.test(
- x = data.frame(c(100,50,0),c(100,100,50),c(0,50,50),
+ x = data.frame(c(100,50,0), c(100,100,50), c(0,50,50)),
  p = rep(1/3, 3)
 )
 ```
