:pencil2: fixed typo

--- a/_posts/2020-08-04-vechisq.md
+++ b/_posts/2020-08-04-vechisq.md
@@ -47,7 +47,7 @@ chisq.test       37.70792
 chisq.slim.test  5.22655 
 ```
 
-To run this slim function 1000 time would require using something like `apply()`, i.e. looping over every test and thus taking 1000 times longer. To improve the efficiency of our function, we can vectorise the code. Below is the vectorised version. Lets go through the changes. 
+To run this slim function 1000 times would require using something like `apply()`, i.e. looping over every test and thus taking 1000 times longer. To improve the efficiency of our function, we can vectorise the code. Below is the vectorised version. Lets go through the changes. 
 
 ```R
 > chisq.vec.test  <- function(x, p) {
