--- a/_posts/2020-09-22-monitouR.md
+++ b/_posts/2020-09-22-monitouR.md
@@ -110,17 +110,17 @@ The lifecycle of a `monitauR` script is as follows:
 6. Any errors are caught and sent to the server (status set to error)
 7. When the script completes the Job status is set to finished
 
-The real trick to `monitouR` is creating futures (step 3) for each of the comments so that the calls to the server only happen when the evaluation reaches that part of the script.
+The real trick to `monitouR` is creating futures (step 3) for each of the comments so that the calls to the server only happen when the evaluation reaches that part of the script. 
 
 ## monitauR-api
 
-There is a [plumber api](https://www.rplumber.io/) running on [https://monitaur-api.herokuapp.com/](https://monitaur-api.herokuapp.com/) that receives and logs requests from `monitauR::monitor`. The script infile (`example_scripts/square.R`) has a special comment syntax (`#<`) that tells `monitauR::monitor` when to send a comment to log.
+There is a [plumber api](https://www.rplumber.io/) running on [https://monitaur-api.herokuapp.com/](https://monitaur-api.herokuapp.com/) that receives and logs requests from `monitauR::monitor` i.e. when a special comment syntax (`#<`) is reached.
 
 ![monitaur_swagger](/assets/images/swagger.png)
 
 ## monitauR-webapp
 
-To complete this project I needed a nice way to interact with the jobs being monitored. I made webapp using 11ty, alpine.js and tailwind that has a jobs board (Details [here](https://github.com/Wytamma/monitauR-webapp). 
+To complete this project I needed a nice way to interact with the jobs being monitored. I made webapp using `11ty`, `alpine.js` and `tailwind css` (Details [here](https://github.com/Wytamma/monitauR-webapp). 
 ). 
 
 ![monitaur_jobs](/assets/images/jobs.png)
