:art: Move logo

--- a/_posts/2020-09-22-monitouR.md
+++ b/_posts/2020-09-22-monitouR.md
@@ -2,6 +2,8 @@
 title: "MonitouR 🐮"
 date: 2020-09-22T00:00:00-00:00
 excerpt_separator: "<!--more-->"
+header:
+  image: assets/images/monitaur_logo.png
 categories:
   - project
 tags:
@@ -13,7 +15,7 @@ tags:
 
 Introducing **MonitauR**, a package to easily and remotely monitor the progress of your R scripts.
 
-![monitaur_logo](/assets/images/monitaur_logo.png)
+<!--more-->
 
 I like the idea of being able to see the progress of your analysis pipelines though some user friendly Interface i.e. not a `qsub` log file or command line output. I decide to combining this idea with my mission to begrudgingly learn more `R` programming. I like to make Restful webAPIs (insert like to future Fasteve post here) and though that would be a nice place to start with `R` as I already know a lot of the theory. However, I needed something to build my API around and thus `monitauR` was borne.
 
