:pencil2: some typos

--- a/_posts/2020-09-22-monitouR.md
+++ b/_posts/2020-09-22-monitouR.md
@@ -21,7 +21,7 @@ I like the idea of being able to see the progress of your analysis pipelines tho
 
 ## plumber
 
-`Plumber` is an API Generator for `R`. Plumber allows you to create a web API by merely decorating your existing R source code with special comments. The initialisation function from `plumber` builds a router that maps incoming requests to endpoints. Plumber files uses a special comment syntax to tell `plumber` how to build the API. Below is an example of a plumber file with the special comments `#*`. For example you could go to `http://localhost:8000/echo?msg=hello` and the API would return `hello`. Not bad! I like the ability to quickly go from R code (many some statistical model) to an API with a few simple comments. 
+`Plumber` is an API Generator for `R`. Plumber allows you to create a web API by merely decorating your existing R source code with special comments. The initialisation function from `plumber` builds a router that maps incoming requests to endpoints. Plumber files uses a special comment syntax to tell `plumber` how to build the API. Below is an example of a plumber file with the special comments `#*`. For example you could go to `http://localhost:8000/echo?msg=hello` and the API would return `hello`. Not bad! I like the ability to quickly go from R code (like some statistical model) to an API with no real changes to the code. 
 
 ```R
 # plumber.R
@@ -36,13 +36,19 @@ function(msg="") {
 
 ## special comment hacks
 
-This is not the first time I've ran into this kind of special comment syntax for modifying an `R` script. `roxygen` also uses special comments (`#'`) to help build packages and build documentation from `R` source code. These comments almost feel like hacks as they are a syntax built on top of the langue that has nothing to do with it, however, they don't interfere with running scripts as they are after all just comments. I started to think of other uses of these special comment hacks and landed of what i think is an elegant solution to script progress monitoring. 
+This is not the first time I've ran into this kind of special comment syntax for modifying an `R` script. `roxygen` also uses special comments (`#'`) to help build packages and build documentation from `R` source code. These comments almost feel like hacks as they are a syntax built on top of the langue that has nothing to do with it, however, they don't interfere with running scripts as they are after all just comments. 
+
+I started to think of other uses of these special comment hacks and landed on what I think is an elegant solution to script progress monitoring. 
 
 ## MonitouR
 
-MonitouR uses a similar tactic to `plumber` and `roxygen` e.g. special comments define when some code should be executed. The best way to explain might be with an example. Below is a script documented with the `monitouR` special comments. 
+`MonitouR` uses a similar tactic to `plumber` and `roxygen` e.g. special comments define when some code should be executed. 
+
+The best way to explain might be with an example. Below is a script documented with the `monitouR` special comments. 
 
 ```R
+# example_scripts/square.R
+
 #< Setting up the square function
 square <- function(x) {
   x*x
@@ -63,7 +69,9 @@ Job 1: Computing the square (2/2)
 Job 1: --- Finished ---
 ```
 
-While evaluating the script when the special comment (`#<`) is reached a request is sent to a server telling it to log the comment. This allows you to follow allowing with your script in real-time from anywhere with an internet connection. 
+While evaluating the script when the special comment (`#<`) is reached a request is sent to a server telling it to log the comment. 
+
+This allows you to follow allowing with your script in real-time from anywhere with an internet connection. 
 
 ```bash
 curl 'https://monitaur-api.herokuapp.com/jobs' | json_pp
