--- a/_posts/2020-09-22-monitouR.md
+++ b/_posts/2020-09-22-monitouR.md
@@ -19,7 +19,7 @@ I like the idea of being able to see the progress of your analysis pipelines tho
 
 ## plumber
 
-`Plumber` is an API Generator for `R`. Plumber allows you to create a web API by merely decorating your existing R source code with special comments. The initialisation function from `plumber` builds a router that maps incoming requests to endpoints. Plumber files uses a special comment syntax to tell `plumber` how to build the API. Below is an example of a plumber file with the special comments `#*`. For example you could go to `http://localhost:8000/echo?msg=hello` and the API would return `hello`. Not bad! I like the ability to quickly go from R code (like some statistical model) to an API with no real changes to the code. 
+[Plumber](https://www.rplumber.io/) is an API Generator for `R`. Plumber allows you to create a web API by merely decorating your existing R source code with special comments. The initialisation function from `plumber` builds a router that maps incoming requests to endpoints. Plumber files uses a special comment syntax to tell `plumber` how to build the API. Below is an example of a plumber file with the special comments (`#*`). For example you could go to [http://localhost:8000/echo?msg=hello]() and the API would return `hello`. Not bad! I like the ability to quickly go from R code (like some statistical model) to an API with no real changes to the code. 
 
 ```R
 # plumber.R
@@ -34,7 +34,7 @@ function(msg="") {
 
 ## special comment hacks
 
-This is not the first time I've ran into this kind of special comment syntax for modifying an `R` script. `roxygen` also uses special comments (`#'`) to help build packages and build documentation from `R` source code. These comments almost feel like hacks as they are a syntax built on top of the langue that has nothing to do with it, however, they don't interfere with running scripts as they are after all just comments. 
+This is not the first time I've ran into this kind of special comment syntax for modifying an `R` script. [Roxygen2](https://cran.r-project.org/web/packages/roxygen2/vignettes/roxygen2.html) also uses special comments (`#'`) to help build packages and build documentation from `R` source code. These comments almost feel like hacks as they are a syntax built on top of the langue that has nothing to do with it, however, they don't interfere with running scripts as they are after all just comments. 
 
 I started to think of other uses of these special comment hacks and landed on what I think is an elegant solution to script progress monitoring. 
 
@@ -128,7 +128,7 @@ There is a [plumber api](https://www.rplumber.io/) running on [https://monitaur-
 
 ## monitauR-webapp
 
-To complete this project I needed a nice way to interact with the jobs being monitored. I made webapp using `11ty`, `alpine.js` and `tailwind css` (Details [here](https://github.com/Wytamma/monitauR-webapp). 
+To complete this project I needed a nice way to interact with the jobs being monitored. I made webapp using [11ty](https://www.11ty.dev/), [alpine.js]https://github.com/alpinejs/alpine) and [tailwind css](https://tailwindcss.com/) (Details [here](https://github.com/Wytamma/monitauR-webapp). 
 ). 
 
 ![monitaur_jobs](/assets/images/jobs.png)
