:pencil2: fix link typo

--- a/_posts/2020-09-22-monitouR.md
+++ b/_posts/2020-09-22-monitouR.md
@@ -130,7 +130,7 @@ There is a [plumber api](https://www.rplumber.io/) running on [https://monitaur-
 
 ## monitauR-webapp
 
-To complete this project I needed a nice way to interact with the jobs being monitored. I made webapp using [11ty](https://www.11ty.dev/), [alpine.js]https://github.com/alpinejs/alpine) and [tailwind css](https://tailwindcss.com/) (Details [here](https://github.com/Wytamma/monitauR-webapp). 
+To complete this project I needed a nice way to interact with the jobs being monitored. I made webapp using [11ty](https://www.11ty.dev/), [alpine.js](https://github.com/alpinejs/alpine) and [tailwind css](https://tailwindcss.com/) (Details [here](https://github.com/Wytamma/monitauR-webapp). 
 ). 
 
 ![monitaur_jobs](/assets/images/jobs.png)
