--- a/_posts/2020-09-22-monitouR.md
+++ b/_posts/2020-09-22-monitouR.md
@@ -17,7 +17,7 @@ Introducing [MonitauR](https://github.com/Wytamma/monitauR), a package to easily
 
 I like the idea of being able to see the progress of your analysis pipelines though some user friendly Interface i.e. not a `qsub` log file or command line output. I decide to combining this idea with my mission to begrudgingly learn more `R` programming. 
 
-I like to make Restful webAPIs (insert like to future Fasteve post here) and though that would be a nice place to start with `R` as I already know a lot of the theory. However, I needed something to build my API around and thus `monitauR` was borne.
+I like to make Restful webAPIs (*insert link to future [Fasteve](https://github.com/Wytamma/fasteve) post here*) and though that would be a nice place to start with `R` as I already know a lot of the theory. However, I needed something to build my API around and thus `monitauR` was borne.
 
 ## Plumber
 
