--- a/_posts/2020-08-04-vechisq.md
+++ b/_posts/2020-08-04-vechisq.md
@@ -18,7 +18,7 @@ A simple way to write more efficient code is to vectorise it. Vectorising code a
 
 ### An Example in R 
 
-Below is the is an example of how I vectorised the `chisq.test` function in R. I wanted a faster way to compute 1000's of Chi-square tests. The traditional approach might be to do this in parallel, i.e. batching the tests and running them on multiple cores. However, we don't always have access to a HPC, so I chose to vectorise the function. 
+Below is the is an example of how I vectorised the `chisq.test` function in R. A friend wanted a faster way to compute 1000's of Chi-square tests. The traditional approach might be to do this in parallel, i.e. batching the tests and running them on multiple cores. However, we don't always have access to a HPC, so I chose to vectorise the function. 
 
 If you run `View(chisq.test)` in the R console you'll see the source code of the original [chisq.test method](https://github.com/wch/r-source/blob/5a156a0865362bb8381dcd69ac335f5174a4f60c/src/library/stats/R/chisq.test.R). A simple way to speed things up (that doesn't have anything to do with vectorisation) is to strip out the stuff you don't need. Functions are written more generally than is required. If we know precisely how our function is going to be used we can remove a lot of the pointless checks included for the general use case. I want a Chi-squared test for given probabilities with a p-value, all other code can be removed. 
 
