--- a/_posts/2020-08-04-vechisq.md
+++ b/_posts/2020-08-04-vechisq.md
@@ -14,7 +14,7 @@ Writing fast code is actually about writing efficient code. Writing code in R do
 
 ## Vectorise your code
 
-A simple way to write more efficient code is to vectorise it. Vectorising code amounts to replacing loops or element-wise operations with low-level vector-based functions. The easiest way to vectorise your code is to replace functions in your program with existing low-level functions. This might involve replacing `mean()` with `rowMeans()` in R, replacing a loop-based element-wise product with `numpy.multiple()` in Python, or doing some matrix math. If this fails, one can always drop into the world of C though with [Rcpp](http://www.rcpp.org/) or the [Python/C API](https://docs.python.org/3/c-api/index.html). 
+A simple way to write more efficient code is to vectorise it. Vectorising code amounts to replacing loops or element-wise operations with low-level vector-based functions. The easiest way to vectorise your code is to replace functions in your program with existing low-level functions. This might involve replacing `mean()` with `rowMeans()` in R, replacing a loop-based element-wise product with `numpy.multiple()` in Python, or doing some matrix math. If this fails, one can always drop into the world of C though [Rcpp](http://www.rcpp.org/) or the [Python/C API](https://docs.python.org/3/c-api/index.html). 
 
 ### An Example in R 
 
