:art: update text

--- a/_posts/2020-09-22-monitauR.md
+++ b/_posts/2020-09-22-monitauR.md
@@ -113,7 +113,7 @@ curl 'https://monitaur-api.herokuapp.com/steps' | json_pp
 The lifecycle of a `monitauR` script is as follows:
 
 1. The script is parsed and the expressions are extracted
-2. Job ID is generated (status set to initialised)
+2. Job ID (and token) is generated (status set to initialised)
 3. A future is created (using the Job ID) for each special comment step
 4. Job status is set to running
 5. Script is evaluated and futures are run in sequential order 
