--- a/_posts/2024-01-22-beast-2.7-snakemake.md
+++ b/_posts/2024-01-22-beast-2.7-snakemake.md
@@ -13,89 +13,97 @@ tags:
 ---
 
 
-BEAST 2.7 is out and promises to be better than ever. I wanted to try it out on a few datasets and decided to use Snakemake to manage the workflow. I've been using Snakemake for a few years now and it's a great tool for managing bioinformatics workflows. Check out the [Snakemake Tutorial](https://snakemake.readthedocs.io/en/stable/tutorial/tutorial.html) for a quick introduction.
+[BEAST 2.7](https://www.beast2.org/2022/09/01/what-is-new-in-v2.7.0.html) is out and promises to be better than ever. However, it's not available on conda yet. This post will show you how to use BEAST 2.7 with Snakemake to automatically install BEAST 2.7 and its packages.
 
+I've been using Snakemake for a few years now and it's a great tool for managing bioinformatics workflows. Check out the [Snakemake Tutorial](https://snakemake.readthedocs.io/en/stable/tutorial/tutorial.html) for a quick introduction.
 
 <!--more-->
 
-BEAST 2.7 isn't currently available on conda, however, we can use a [post-deployment](https://snakemake.readthedocs.io/en/stable/snakefiles/deployment.html#providing-post-deployment-scripts) script to install it. Post-deployment scripts are run after the env is installed and can be used to install additional packages or perform other tasks.
+BEAST 2.7 isn't currently available on conda, however, we can use a [post-deployment](https://snakemake.readthedocs.io/en/stable/snakefiles/deployment.html#providing-post-deployment-scripts) script to install it. Post-deployment scripts are run after the environment is installed and can be used to install additional packages or perform other tasks.
 
-The following script will download and install BEAST 2.7.6. It will also install the ReMASTER package (as an example). You can add additional packages by adding them to the PACKAGES array.
+The following script will download and install BEAST 2.7.6. It will also install the ReMASTER package (as an example). You can add additional packages by adding them to the `PACKAGES` array and change the BEAST version by changing the `VERSION` variable.
 
-```bash
-#!env bash
-set -o pipefail
-set -e # Exit on error
+It's not that important to understand the script, but I've added comments to explain what it's doing. The script is designed to be platform agnostic and will download the appropriate version of BEAST 2.7 for your operating system.
 
-# Define the version variable
-VERSION="2.7.6"
-# array of packages to install
-PACKAGES=("ReMASTER")
+<details>
 
-# Function to download, install, and symlink
-download_install_symlink() {
-    os=$(uname -s)
-    arch=$(uname -m)
-    file=""
+  <summary>beast.post-deploy.sh</summary>
 
-    # change to the envs directory
-    cd $CONDA_PREFIX
+  ```bash
+  #!env bash
+  set -o pipefail
+  set -e # Exit on error
 
-    # Download and Install
-    if [[ "$os" == "Darwin" ]]; then
-        file="BEAST.v$VERSION.Mac.dmg"
-        curl -LO "https://github.com/CompEvol/beast2/releases/download/v$VERSION/$file"
-        hdiutil mount "$file"  # This mounts the dmg file
-        cp -R "/Volumes/BEAST v$VERSION/BEAST $VERSION/" "$CONDA_PREFIX/lib/beast"
-        hdiutil unmount "/Volumes/BEAST v$VERSION/"
-    elif [[ "$os" == "Linux" ]]; then
-        if [[ "$arch" == "x86_64" ]]; then
-            file="BEAST.v$VERSION.Linux.x86.tgz"
-        elif [[ "$arch" == "aarch64" ]]; then
-            file="BEAST.v$VERSION.Linux.aarch64.tgz"
-        else
-            echo "Unsupported architecture"
-            return 1
-        fi
-        curl -LO "https://github.com/CompEvol/beast2/releases/download/v$VERSION/$file"
-        tar -xzvf "$file"
-        mv beast "$CONDA_PREFIX/lib/beast"
-    else
-        echo "Unsupported operating system"
-        return 1
-    fi
+  # Define the version variable
+  VERSION="2.7.6"
+  # array of packages to install
+  PACKAGES=("ReMASTER")
 
-    # Create symlinks
-    for cmd in "$CONDA_PREFIX/lib/beast/bin/"*; do
-        ln -sf "$cmd" "$CONDA_PREFIX/bin/"
-    done
-    
-    # Remove the downloaded file
-    rm -rf "$file"
-}
+  # Function to download, install, and symlink
+  download_install_symlink() {
+      os=$(uname -s)
+      arch=$(uname -m)
+      file=""
 
-# Call the function
-download_install_symlink
+      # change to the envs directory
+      cd $CONDA_PREFIX
 
-# This script is used to add packages to beast after the beast.yaml env is installed
-beast -version  # Need to call beast once (even just to query the version) to create support dirs
+      # Download and Install
+      if [[ "$os" == "Darwin" ]]; then
+          file="BEAST.v$VERSION.Mac.dmg"
+          curl -LO "https://github.com/CompEvol/beast2/releases/download/v$VERSION/$file"
+          hdiutil mount "$file"  # This mounts the dmg file
+          cp -R "/Volumes/BEAST v$VERSION/BEAST $VERSION/" "$CONDA_PREFIX/lib/beast"
+          hdiutil unmount "/Volumes/BEAST v$VERSION/"
+      elif [[ "$os" == "Linux" ]]; then
+          if [[ "$arch" == "x86_64" ]]; then
+              file="BEAST.v$VERSION.Linux.x86.tgz"
+          elif [[ "$arch" == "aarch64" ]]; then
+              file="BEAST.v$VERSION.Linux.aarch64.tgz"
+          else
+              echo "Unsupported architecture"
+              return 1
+          fi
+          curl -LO "https://github.com/CompEvol/beast2/releases/download/v$VERSION/$file"
+          tar -xzvf "$file"
+          mv beast "$CONDA_PREFIX/lib/beast"
+      else
+          echo "Unsupported operating system"
+          return 1
+      fi
 
-# Install packages
-for package in "${PACKAGES[@]}"; do
-    packagemanager -add "$package"
-done
+      # Create symlinks
+      for cmd in "$CONDA_PREFIX/lib/beast/bin/"*; do
+          ln -sf "$cmd" "$CONDA_PREFIX/bin/"
+      done
+      
+      # Remove the downloaded file
+      rm -rf "$file"
+  }
 
-# Ensure beagle is available
-# Activate script: Set up LD_LIBRARY_PATH for beagle
-echo -e 'export LD_LIBRARY_PATH_CONDA_BACKUP="${LD_LIBRARY_PATH:-}"\nexport LD_LIBRARY_PATH=$CONDA_PREFIX/lib' > $CONDA_PREFIX/etc/conda/activate.d/beagle_activate.sh
+  # Call the function
+  download_install_symlink
 
-# Deactivate script: Restore original LD_LIBRARY_PATH and clean up
-echo -e 'export LD_LIBRARY_PATH=${LD_LIBRARY_PATH_CONDA_BACKUP:-}\nunset LD_LIBRARY_PATH_CONDA_BACKUP\n[ -z $LD_LIBRARY_PATH ] && unset LD_LIBRARY_PATH' > $CONDA_PREFIX/etc/conda/deactivate.d/beagle_deactivate.sh
-```
+  # This script is used to add packages to beast after the beast.yaml env is installed
+  beast -version  # Need to call beast once (even just to query the version) to create support dirs
 
-The script is designed to be platform agnostic and will download the appropriate version of BEAST 2.7 for your operating system. 
+  # Install packages
+  for package in "${PACKAGES[@]}"; do
+      packagemanager -add "$package"
+  done
 
-The script will be used with a Snakemake env file. Post-deployment scripts are run after the env is installed and must be named `<envname>.post-deploy.sh`. For example, if your env is called `beast.yaml`, the post-deployment script above should be located next to the environment file and called `beast.post-deploy.sh`.
+  # Ensure beagle is available
+  # Activate script: Set up LD_LIBRARY_PATH for beagle
+  echo -e 'export LD_LIBRARY_PATH_CONDA_BACKUP="${LD_LIBRARY_PATH:-}"\nexport LD_LIBRARY_PATH=$CONDA_PREFIX/lib' > $CONDA_PREFIX/etc/conda/activate.d/beagle_activate.sh
+
+  # Deactivate script: Restore original LD_LIBRARY_PATH and clean up
+  echo -e 'export LD_LIBRARY_PATH=${LD_LIBRARY_PATH_CONDA_BACKUP:-}\nunset LD_LIBRARY_PATH_CONDA_BACKUP\n[ -z $LD_LIBRARY_PATH ] && unset LD_LIBRARY_PATH' > $CONDA_PREFIX/etc/conda/deactivate.d/beagle_deactivate.sh
+  ```
+
+</details>
+
+
+The script will be used with a [Snakemake environment file](https://snakemake.readthedocs.io/en/stable/snakefiles/deployment.html#integrated-package-management). Post-deployment scripts are run after the env is installed and must be named `<envname>.post-deploy.sh`. For example, if your env is called `beast.yaml`, the post-deployment script above should be located next to the environment file and called `beast.post-deploy.sh`.
 
 Here's an example env file that installs beagle-lib (env must install something). The post-deployment script will run after and install BEAST 2.7 and ReMASTER.
 
