:art: some updates

--- a/_posts/2024-01-22-beast-2.7-snakemake.md
+++ b/_posts/2024-01-22-beast-2.7-snakemake.md
@@ -19,7 +19,7 @@ I've been using Snakemake for a few years now and it's a great tool for managing
 
 <!--more-->
 
-BEAST 2.7 isn't currently available on conda, however, we can use a [post-deployment](https://snakemake.readthedocs.io/en/stable/snakefiles/deployment.html#providing-post-deployment-scripts) script to install it. Post-deployment scripts are run after the environment is installed and can be used to install additional packages or perform other tasks.
+BEAST 2.7 isn't currently available on conda, however, we can use a [post-deployment](https://snakemake.readthedocs.io/en/stable/snakefiles/deployment.html#providing-post-deployment-scripts) script to install it into a Snakemake pipeline. Post-deployment scripts are run after a environment is created and can be used to install additional packages or perform other tasks.
 
 The following script will download and install BEAST 2.7.6. It will also install the ReMASTER package (as an example). You can add additional packages by adding them to the `PACKAGES` array and change the BEAST version by changing the `VERSION` variable.
 
@@ -95,7 +95,6 @@ echo -e 'export LD_LIBRARY_PATH_CONDA_BACKUP="${LD_LIBRARY_PATH:-}"\nexport LD_L
 # Deactivate script: Restore original LD_LIBRARY_PATH and clean up
 echo -e 'export LD_LIBRARY_PATH=${LD_LIBRARY_PATH_CONDA_BACKUP:-}\nunset LD_LIBRARY_PATH_CONDA_BACKUP\n[ -z $LD_LIBRARY_PATH ] && unset LD_LIBRARY_PATH' > $CONDA_PREFIX/etc/conda/deactivate.d/beagle_deactivate.sh
 ```
-
 
 The script will be used with a [Snakemake environment file](https://snakemake.readthedocs.io/en/stable/snakefiles/deployment.html#integrated-package-management). Post-deployment scripts are run after the env is installed and must be named `<envname>.post-deploy.sh`. For example, if your env is called `beast.yaml`, the post-deployment script above should be located next to the environment file and called `beast.post-deploy.sh`.
 
