--- a/_posts/2025-01-13-52-apps.md
+++ b/_posts/2025-01-13-52-apps.md
@@ -7,7 +7,7 @@ tags:
   - development
 ---
 
-# In 2025 I set my self the challenge of building 52 apps
+## In 2025 I set my self the challenge of building 52 apps
 
 I've decided to set my self the challenge of building 52 apps in 2025. I'm not sure if I'll be able to complete it but I'm going to give it a try.
 
