Add Wasm version of EMBL-EBI Muscle MSA service

--- a/_posts/2025-01-13-52-apps.md
+++ b/_posts/2025-01-13-52-apps.md
@@ -26,3 +26,4 @@ I've decided to set my self the challenge of building 52 apps in 2025. I'm not s
 11. [Marcel Ball](https://editor.p5js.org/wytamma/full/BryAAtSPd) - Pong-like game I created with my Niphew.
 12. [Glass Candle](https://blog.wytamma.com/glasscandle/) - A flexible, modular version monitoring tool that tracks changes across multiple sources including PyPI, Conda, and custom URLs.
 13. [RoiThePig](https://github.com/Wytamma/roithepig) - A small video-processing pipeline that uses [DeepLabCut](https://github.com/DeepLabCut/DeepLabCut) to detect a body part (e.g., a pig’s ear), crops the region-of-interest around it.
+14. [Wasm Version of EMBL-EBI Muscle MSA scervice](https://blog.wytamma.com/embl-ebi-muscle-wasm/) - Used [Biowasm](https://biowasm.com/) and Svelte to create a client side version of the app
