Add new apps to the list in 52-apps.md

--- a/_posts/2025-01-13-52-apps.md
+++ b/_posts/2025-01-13-52-apps.md
@@ -27,3 +27,7 @@ I've decided to set my self the challenge of building 52 apps in 2025. I'm not s
 12. [Glass Candle](https://blog.wytamma.com/glasscandle/) - A flexible, modular version monitoring tool that tracks changes across multiple sources including PyPI, Conda, and custom URLs.
 13. [RoiThePig](https://github.com/Wytamma/roithepig) - A small video-processing pipeline that uses [DeepLabCut](https://github.com/DeepLabCut/DeepLabCut) to detect a body part (e.g., a pig’s ear), crops the region-of-interest around it.
 14. [Wasm Version of EMBL-EBI Muscle MSA scervice](https://blog.wytamma.com/embl-ebi-muscle-wasm/) - Used [Biowasm](https://biowasm.com/) and Svelte to create a client side version of the app
+15. [Phylogenetic Tree Additivity Diagnostics] - Wrote an web app with additivity diagnostics for phylogenetics trees i.e. do the tree-derived distances (patristic distances) equal the original distance matrix distances.
+16. [Covdrop](https://github.com/MDU-PHL/covdrop) - Pipeline/CLI tool for detecting primer dropout in SARS-CoV-2 tiled amplicon genomes.
+
+
