Add Snippy-ng-cluster-pipeline to app list

--- a/_posts/2025-01-13-52-apps.md
+++ b/_posts/2025-01-13-52-apps.md
@@ -29,5 +29,6 @@ I've decided to set my self the challenge of building 52 apps in 2025. I'm not s
 14. [Wasm Version of EMBL-EBI Muscle MSA scervice](https://blog.wytamma.com/embl-ebi-muscle-wasm/) - Used [Biowasm](https://biowasm.com/) and Svelte to create a client side version of the app
 15. [Phylogenetic Tree Additivity Diagnostics](https://blog.wytamma.com/additive-nj/) - Wrote an web app with additivity diagnostics for phylogenetics trees i.e. do the tree-derived distances (patristic distances) equal the original distance matrix distances.
 16. [Covdrop](https://github.com/MDU-PHL/covdrop) - Pipeline/CLI tool for detecting primer dropout in SARS-CoV-2 tiled amplicon genomes.
+17. [Snippy-ng-cluster-pipeline](https://github.com/Wytamma/snippy-ng-cluster-pipeline) - A Snakemake/[snk](snk.wytamma.com) pipeline for outbreak cluster analysis with snippy-ng.
 
 
