Fix: update link formatting for LLM server confirmation in HPC-GPT tutorial

--- a/_posts/2025-12-09-hpc-gpt.md
+++ b/_posts/2025-12-09-hpc-gpt.md
@@ -131,7 +131,7 @@ ssh -N -J ${HPC_USERNAME}@${HOSTNAME} \
     -L 11434:127.0.0.1:11434
 ```
 
-You can now navigate to http://127.0.0.1:11434 in your web browser to confirm the LLM server is running.
+You can now navigate to [http://127.0.0.1:11434](http://127.0.0.1:11434) in your web browser to confirm the LLM server is running.
 
 ## Adding a Chat GUI
 
