Fix: correct title casing in HPC-GPT tutorial

--- a/_posts/2025-12-09-hpc-gpt.md
+++ b/_posts/2025-12-09-hpc-gpt.md
@@ -1,5 +1,5 @@
 ---
-title: "HPC-GPT: Deploying a private LLMs on the HPC"
+title: "HPC-GPT: Deploying Private LLMs on the HPC"
 published: true
 header:
   image: assets/images/hpc-gpt-terminal.png
